# DataIO

./: .gitignore  CMakeLists.txt  DataIO.sln  Exception.cpp  Exception.hpp  Meta.cpp  Meta.hpp  ReadFile.cpp  ReadFile.hpp  WriteFile.cpp  WriteFile.hpp  iodata.cpp  iodata.hpp  main.cpp
DataIO/: DataIO.vcxproj  DataIO.vcxproj.filters  Exception.cpp  Exception.hpp  ReadFile.cpp  ReadFile.hpp  main.cpp
